tortoise/parser.js
TORTOISE = (function(){
    /*
     * Generated by PEG.js 0.7.0.
     *
     * http://pegjs.majda.cz/
     */

    function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         *
         * For portability, we also escape escape all control and non-ASCII
         * characters. Note that "\0" and "\v" escape sequences are not used
         * because JSHint does not like the first and IE the second.
         */
        return '"' + s
            .replace(/\\/g, '\\\\')  // backslash
            .replace(/"/g, '\\"')    // closing quote character
            .replace(/\x08/g, '\\b') // backspace
            .replace(/\t/g, '\\t')   // horizontal tab
            .replace(/\n/g, '\\n')   // line feed
            .replace(/\f/g, '\\f')   // form feed
            .replace(/\r/g, '\\r')   // carriage return
            .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
            + '"';
    }

    var result = {
        /*
         * Parses the input with a generated parser. If the parsing is successfull,
         * returns a value explicitly or implicitly specified by the grammar from
         * which the parser was generated (see |PEG.buildParser|). If the parsing is
         * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
         */
        parse: function(input, startRule) {
            var parseFunctions = {
                "expression": parse_expression,
                "statements": parse_statements,
                "statement": parse_statement,
                "comma_identifier": parse_comma_identifier,
                "ident_list": parse_ident_list,
                "variable": parse_variable,
                "comma_variables": parse_comma_variables,
                "vars_list": parse_vars_list,
                "logic_op": parse_logic_op,
                "ternary": parse_ternary,
                "logic": parse_logic,
                "comp_op": parse_comp_op,
                "comparative": parse_comparative,
                "additive_op": parse_additive_op,
                "additive": parse_additive,
                "mult_op": parse_mult_op,
                "multiplicative": parse_multiplicative,
                "negation": parse_negation,
                "primary": parse_primary,
                "color": parse_color,
                "comma_expression": parse_comma_expression,
                "arglist": parse_arglist,
                "integer": parse_integer,
                "number": parse_number,
                "number_frac": parse_number_frac,
                "validfirstchar": parse_validfirstchar,
                "validchar": parse_validchar,
                "identifier": parse_identifier,
                "ws": parse_ws
            };

            if (startRule !== undefined) {
                if (parseFunctions[startRule] === undefined) {
                    throw new Error("Invalid rule name: " + quote(startRule) + ".");
                }
            } else {
                startRule = "statements";
            }

            var pos = 0;
            var reportFailures = 0;
            var rightmostFailuresPos = 0;
            var rightmostFailuresExpected = [];

            function padLeft(input, padding, length) {
                var result = input;

                var padLength = length - input.length;
                for (var i = 0; i < padLength; i++) {
                    result = padding + result;
                }

                return result;
            }

            function escape(ch) {
                var charCode = ch.charCodeAt(0);
                var escapeChar;
                var length;

                if (charCode <= 0xFF) {
                    escapeChar = 'x';
                    length = 2;
                } else {
                    escapeChar = 'u';
                    length = 4;
                }

                return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
            }

            function matchFailed(failure) {
                if (pos < rightmostFailuresPos) {
                    return;
                }

                if (pos > rightmostFailuresPos) {
                    rightmostFailuresPos = pos;
                    rightmostFailuresExpected = [];
                }

                rightmostFailuresExpected.push(failure);
            }

            function parse_expression() {
                var result0;
                var pos0;

                pos0 = pos;
                result0 = parse_ternary();
                if (result0 !== null) {
                    result0 = (function(offset, expr) { return expr; })(pos0, result0);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                return result0;
            }

            function parse_statements() {
                var result0, result1;

                result0 = [];
                result1 = parse_statement();
                while (result1 !== null) {
                    result0.push(result1);
                    result1 = parse_statement();
                }
                return result0;
            }

            function parse_statement() {
                var result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11, result12, result13, result14, result15, result16, result17, result18, result19;
                var pos0, pos1;

                pos0 = pos;
                pos1 = pos;
                result0 = parse_identifier();
                if (result0 !== null) {
                    result1 = parse_ws();
                    if (result1 !== null) {
                        if (input.substr(pos, 2) === ":=") {
                            result2 = ":=";
                            pos += 2;
                        } else {
                            result2 = null;
                            if (reportFailures === 0) {
                                matchFailed("\":=\"");
                            }
                        }
                        if (result2 !== null) {
                            result3 = parse_ws();
                            if (result3 !== null) {
                                result4 = parse_expression();
                                if (result4 !== null) {
                                    result5 = parse_ws();
                                    if (result5 !== null) {
                                        if (input.charCodeAt(pos) === 59) {
                                            result6 = ";";
                                            pos++;
                                        } else {
                                            result6 = null;
                                            if (reportFailures === 0) {
                                                matchFailed("\";\"");
                                            }
                                        }
                                        if (result6 !== null) {
                                            result7 = parse_ws();
                                            if (result7 !== null) {
                                                result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
                                            } else {
                                                result0 = null;
                                                pos = pos1;
                                            }
                                        } else {
                                            result0 = null;
                                            pos = pos1;
                                        }
                                    } else {
                                        result0 = null;
                                        pos = pos1;
                                    }
                                } else {
                                    result0 = null;
                                    pos = pos1;
                                }
                            } else {
                                result0 = null;
                                pos = pos1;
                            }
                        } else {
                            result0 = null;
                            pos = pos1;
                        }
                    } else {
                        result0 = null;
                        pos = pos1;
                    }
                } else {
                    result0 = null;
                    pos = pos1;
                }
                if (result0 !== null) {
                    result0 = (function(offset, v, expr) { return { tag:":=", left: v, right: expr }; })(pos0, result0[0], result0[4]);
                }
                if (result0 === null) {
                    pos = pos0;
                }
                if (result0 === null) {
                    pos0 = pos;
                    pos1 = pos;
                    if (input.substr(pos, 6) === "define") {
                        result0 = "define";
                        pos += 6;
                    } else {
                        result0 = null;
                        if (reportFailures === 0) {
                            matchFailed("\"define\"");
                        }
                    }
                    if (result0 !== null) {
                        result1 = parse_ws();
                        if (result1 !== null) {
                            result2 = parse_identifier();
                            if (result2 !== null) {
                                result3 = parse_ws();
                                if (result3 !== null) {
                                    if (input.charCodeAt(pos) === 40) {
                                        result4 = "(";
                                        pos++;
                                    } else {
                                        result4 = null;
                                        if (reportFailures === 0) {
                                            matchFailed("\"(\"");
                                        }
                                    }
                                    if (result4 !== null) {
                                        result5 = parse_ws();
                                        if (result5 !== null) {
                                            if (input.charCodeAt(pos) === 41) {
                                                result6 = ")";
                                                pos++;
                                            } else {
                                                result6 = null;
                                                if (reportFailures === 0) {
                                                    matchFailed("\")\"");
                                                }
                                            }
                                            if (result6 !== null) {
                                                result7 = parse_ws();
                                                if (result7 !== null) {
                                                    if (input.charCodeAt(pos) === 123) {
                                                        result8 = "{";
                                                        pos++;
                                                    } else {
                                                        result8 = null;
                                                        if (reportFailures === 0) {
                                                            matchFailed("\"{\"");
                                                        }
                                                    }
                                                    if (result8 !== null) {
                                                        result9 = parse_ws();
                                                        if (result9 !== null) {
                                                            result10 = parse_statements();
                                                            if (result10 !== null) {
                                                                if (input.charCodeAt(pos) === 125) {
                                                                    result11 = "}";
                                                                    pos++;
                                                                } else {
                                                                    result11 = null;
                                                                    if (reportFailures === 0) {
                                                                        matchFailed("\"}\"");
                                                                    }
                                                                }
                                                                if (result11 !== null) {
                                                                    result12 = parse_ws();
                                                                    if (result12 !== null) {
                                                                        result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11, result12];
                                                                    } else {
                                                                        result0 = null;
                                                                        pos = pos1;
                                                                    }
                                                                } else {
                                                                    result0 = null;
                                                                    pos = pos1;
                                                                }
                                                            } else {
                                                                result0 = null;
                                                                pos = pos1;
                                                            }
                                                        } else {
                                                            result0 = null;
                                                            pos = pos1;
                                                        }
                                                    } else {
                                                        result0 = null;
                                                        pos = pos1;
                                                    }
                                                } else {
                                                    result0 = null;
                                                    pos = pos1;
                                                }
                                            } else {
                                                result0 = null;
                                                pos = pos1;
                                            }
                                        } else {
                                            result0 = null;
                                            pos = pos1;
                                        }
                                    } else {
                                        result0 = null;
                                        pos = pos1;
                                    }
                                } else {
                                    result0 = null;
                                    pos = pos1;
                                }
                            } else {
                                result0 = null;
                                pos = pos1;
                            }
                        } else {
                            result0 = null;
                            pos = pos1;
                        }
                    } else {
                        result0 = null;
                        pos = pos1;
                    }
                    if (result0 !== null) {
                        result0 = (function(offset, v, body) { return { tag:"define", name:v, args:[], body:body }; })(pos0, result0[2], result0[10]);
                    }
                    if (result0 === null) {
                        pos = pos0;
                    }
                    if (result0 === null) {
                        pos0 = pos;
                        pos1 = pos;
                        if (input.substr(pos, 6) === "define") {
                            result0 = "define";
                            pos += 6;
                        } else {
                            result0 = null;
                            if (reportFailures === 0) {
                                matchFailed("\"define\"");
                            }
                        }
                        if (result0 !== null) {
                            result1 = parse_ws();
                            if (result1 !== null) {
                                result2 = parse_identifier();
                                if (result2 !== null) {
                                    result3 = parse_ws();
                                    if (result3 !== null) {
                                        if (input.charCodeAt(pos) === 40) {
                                            result4 = "(";
                                            pos++;
                                        } else {
                                            result4 = null;
                                            if (reportFailures === 0) {
                                                matchFailed("\"(\"");
                                            }
                                        }
                                        if (result4 !== null) {
                                            result5 = parse_ws();
                                            if (result5 !== null) {
                                                result6 = parse_ident_list();
                                                if (result6 !== null) {
                                                    result7 = parse_ws();
                                                    if (result7 !== null) {
                                                        if (input.charCodeAt(pos) === 41) {
                                                            result8 = ")";
                                                            pos++;
                                                        } else {
                                                            result8 = null;
                                                            if (reportFailures === 0) {
                                                                matchFailed("\")\"");
                                                            }
                                                        }
                                                        if (result8 !== null) {
                                                            result9 = parse_ws();
                                                            if (result9 !== null) {
                                                                if (input.charCodeAt(pos) === 123) {
                                                                    result10 = "{";
                                                                    pos++;
                                                                } else {
                                                                    result10 = null;
                                                                    if (reportFailures === 0) {
                                                                        matchFailed("\"{\"");
                                                                    }
                                                                }
                                                                if (result10 !== null) {
                                                                    result11 = parse_ws();
                                                                    if (result11 !== null) {
                                                                        result12 = parse_statements();
                                                                        if (result12 !== null) {
                                                                            if (input.charCodeAt(pos) === 125) {
                                                                                result13 = "}";
                                                                                pos++;
                                                                            } else {
                                                                                result13 = null;
                                                                                if (reportFailures === 0) {
                                                                                    matchFailed("\"}\"");
                                                                                }
                                                                            }
                                                                            if (result13 !== null) {
                                                                                result14 = parse_ws();
                                                                                if (result14 !== null) {
                                                                                    result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11, result12, result13, result14];
                                                                                } else {
                                                                                    result0 = null;
                                                                                    pos = pos1;
                                                                                }
                                                                            } else {
                                                                                result0 = null;
                                                                                pos = pos1;
                                                                            }
                                                                        } else {
                                                                            result0 = null;
                                                                            pos = pos1;
                                                                        }
                                                                    } else {
                                                                        result0 = null;
                                                                        pos = pos1;
                                                                    }
                                                                } else {
                                                                    result0 = null;
                                                                    pos = pos1;
                                                                }
                                                            } else {
                                                                result0 = null;
                                                                pos = pos1;
                                                            }
                                                        } else {
                                                            result0 = null;
                                                            pos = pos1;
                                                        }
                                                    } else {
                                                        result0 = null;
                                                        pos = pos1;
                                                    }
                                                } else {
                                                    result0 = null;
                                                    pos = pos1;
                                                }
                                            } else {
                                                result0 = null;
                                                pos = pos1;
                                            }
                                        } else {
                                            result0 = null;
                                            pos = pos1;
                                        }
                                    } else {
                                        result0 = null;
                                        pos = pos1;
                                    }
                                } else {
                                    result0 = null;
                                    pos = pos1;
                                }
                            } else {
                                result0 = null;
                                pos = pos1;
                            }
                        } else {
                            result0 = null;
                            pos = pos1;
                        }
                        if (result0 !== null) {
                            result0 = (function(offset, v, args, body) { return { tag:"define", name:v, args:args, body:body }; })(pos0, result0[2], result0[6], result0[12]);
                        }
                        if (result0 === null) {
                            pos = pos0;
                        }
                        if (result0 === null) {
                            pos0 = pos;
                            pos1 = pos;
                            if (input.substr(pos, 3) === "var") {
                                result0 = "var";
                                pos += 3;
                            } else {
                                result0 = null;
                                if (reportFailures === 0) {
                                    matchFailed("\"var\"");
                                }
                            }
                            if (result0 !== null) {
                                result1 = parse_ws();
                                if (result1 !== null) {
                                    result2 = parse_vars_list();
                                    if (result2 !== null) {
                                        result3 = parse_ws();
                                        if (result3 !== null) {
                                            if (input.charCodeAt(pos) === 59) {
                                                result4 = ";";
                                                pos++;
                                            } else {
                                                result4 = null;
                                                if (reportFailures === 0) {
                                                    matchFailed("\";\"");
                                                }
                                            }
                                            if (result4 !== null) {
                                                result5 = parse_ws();
                                                if (result5 !== null) {
                                                    result0 = [result0, result1, result2, result3, result4, result5];
                                                } else {
                                                    result0 = null;
                                                    pos = pos1;
                                                }
                                            } else {
                                                result0 = null;
                                                pos = pos1;
                                            }
                                        } else {
                                            result0 = null;
                                            pos = pos1;
                                        }
                                    } else {
                                        result0 = null;
                                        pos = pos1;
                                    }
                                } else {
                                    result0 = null;
                                    pos = pos1;
                                }
                            } else {
                                result0 = null;
                                pos = pos1;
                            }
                            if (result0 !== null) {
                                result0 = (function(offset, v) { return { tag:"var", vars:v }; })(pos0, result0[2]);
                            }
                            if (result0 === null) {
                                pos = pos0;
                            }
                            if (result0 === null) {
                                pos0 = pos;
                                pos1 = pos;
                                if (input.substr(pos, 2) === "if") {
                                    result0 = "if";
                                    pos += 2;
                                } else {
                                    result0 = null;
                                    if (reportFailures === 0) {
                                        matchFailed("\"if\"");
                                    }
                                }
                                if (result0 !== null) {
                                    result1 = parse_ws();
                                    if (result1 !== null) {
                                        if (input.charCodeAt(pos) === 40) {
                                            result2 = "(";
                                            pos++;
                                        } else {
                                            result2 = null;
                                            if (reportFailures === 0) {
                                                matchFailed("\"(\"");
                                            }
                                        }
                                        if (result2 !== null) {
                                            result3 = parse_ws();
                                            if (result3 !== null) {
                                                result4 = parse_expression();
                                                if (result4 !== null) {
                                                    result5 = parse_ws();
                                                    if (result5 !== null) {
                                                        if (input.charCodeAt(pos) === 41) {
                                                            result6 = ")";
                                                            pos++;
                                                        } else {
                                                            result6 = null;
                                                            if (reportFailures === 0) {
                                                                matchFailed("\")\"");
                                                            }
                                                        }
                                                        if (result6 !== null) {
                                                            result7 = parse_ws();
                                                            if (result7 !== null) {
                                                                if (input.charCodeAt(pos) === 123) {
                                                                    result8 = "{";
                                                                    pos++;
                                                                } else {
                                                                    result8 = null;
                                                                    if (reportFailures === 0) {
                                                                        matchFailed("\"{\"");
                                                                    }
                                                                }
                                                                if (result8 !== null) {
                                                                    result9 = parse_ws();
                                                                    if (result9 !== null) {
                                                                        result10 = parse_statements();
                                                                        if (result10 !== null) {
                                                                            if (input.charCodeAt(pos) === 125) {
                                                                                result11 = "}";
                                                                                pos++;
                                                                            } else {
                                                                                result11 = null;
                                                                                if (reportFailures === 0) {
                                                                                    matchFailed("\"}\"");
                                                                                }
                                                                            }
                                                                            if (result11 !== null) {
                                                                                result12 = parse_ws();
                                                                                if (result12 !== null) {
                                                                                    if (input.substr(pos, 4) === "else") {
                                                                                        result13 = "else";
                                                                                        pos += 4;
                                                                                    } else {
                                                                                        result13 = null;
                                                                                        if (reportFailures === 0) {
                                                                                            matchFailed("\"else\"");
                                                                                        }
                                                                                    }
                                                                                    if (result13 !== null) {
                                                                                        result14 = parse_ws();
                                                                                        if (result14 !== null) {
                                                                                            if (input.charCodeAt(pos) === 123) {
                                                                                                result15 = "{";
                                                                                                pos++;
                                                                                            } else {
                                                                                                result15 = null;
                                                                                                if (reportFailures === 0) {
                                                                                                    matchFailed("\"{\"");
                                                                                                }
                                                                                            }
                                                                                            if (result15 !== null) {
                                                                                                result16 = parse_ws();
                                                                                                if (result16 !== null) {
                                                                                                    result17 = parse_statements();
                                                                                                    if (result17 !== null) {
                                                                                                        if (input.charCodeAt(pos) === 125) {
                                                                                                            result18 = "}";
                                                                                                            pos++;
                                                                                                        } else {
                                                                                                            result18 = null;
                                                                                                            if (reportFailures === 0) {
                                                                                                                matchFailed("\"}\"");
                                                                                                            }
                                                                                                        }
                                                                                                        if (result18 !== null) {
                                                                                                            result19 = parse_ws();
                                                                                                            if (result19 !== null) {
                                                                                                                result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11, result12, result13, result14, result15, result16, result17, result18, result19];
                                                                                                            } else {
                                                                                                                result0 = null;
                                                                                                                pos = pos1;
                                                                                                            }
                                                                                                        } else {
                                                                                                            result0 = null;
                                                                                                            pos = pos1;
                                                                                                        }
                                                                                                    } else {
                                                                                                        result0 = null;
                                                                                                        pos = pos1;
                                                                                                    }
                                                                                                } else {
                                                                                                    result0 = null;
                                                                                                    pos = pos1;
                                                                                                }
                                                                                            } else {
                                                                                                result0 = null;
                                                                                                pos = pos1;
                                                                                            }
                                                                                        } else {
                                                                                            result0 = null;
                                                                                            pos = pos1;
                                                                                        }
                                                                                    } else {
                                                                                        result0 = null;
                                                                                        pos = pos1;
                                                                                    }
                                                                                } else {
                                                                                    result0 = null;
                                                                                    pos = pos1;
                                                                                }
                                                                            } else {
                                                                                result0 = null;
                                                                                pos = pos1;
                                                                            }
                                                                        } else {
                                                                            result0 = null;
                                                                            pos = pos1;
                                                                        }
                                                                    } else {
                                                                        result0 = null;
                                                                        pos = pos1;
                                                                    }
                                                                } else {
                                                                    result0 = null;
                                                                    pos = pos1;
                                                                }
